# workingset

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
bench/: README.md
bench/harness/: render_report.py  run_minimal_bench.py
docs/: adoption-guide.md  architecture.md  cli-reference.md
examples/: README.md
examples/example-vault/cust/acme/context/: architecture.md  index.md  open-items.md  opp-history.md  personas.md
src/workingset/: __init__.py  brief.py  cli.py  compact.py  index.py  llm.py  tokens.py  vault.py
templates/: README.md  claude-code-snippet.md  codex-snippet.md  cron-refresh.sh  cursor-rules.md  hermes-skill.md
tests/: test_integration.py  test_mock_provider.py  test_workingset.py
