[project]
name = "workingset"
version = "0.1.0"
description = "Vault-aware context compactor for LLM agents. Treat your markdown vault like a working set, not a buffer."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Idan Shimon" }]
keywords = ["llm", "context", "obsidian", "markdown", "agents", "bm25", "fts5"]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40", "openai>=1.50"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
ws = "workingset.cli:main"
workingset = "workingset.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workingset"]
