[project]
name = "workingset"
version = "0.4.0"
description = "Vault-aware context compactor for LLM agents. Treat your markdown vault like a working set, not a buffer."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Idan Shimon" }]
keywords = ["llm", "context", "obsidian", "markdown", "agents", "bm25", "fts5"]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40", "openai>=1.50"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/idanshimon/workingset"
Repository = "https://github.com/idanshimon/workingset"
Issues = "https://github.com/idanshimon/workingset/issues"
Changelog = "https://github.com/idanshimon/workingset/blob/main/CHANGELOG.md"

[project.scripts]
ws = "workingset.cli:main"
workingset = "workingset.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workingset"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --cov-config=pyproject.toml"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["workingset"]
branch = true
omit = ["*/llm.py"]  # optional LLM summarizers — not exercised in default suite

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]  # line-length handled by formatter
